fixed background on mobile

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -360,7 +360,7 @@ X       X  X
     background-position: left top;
     background-size: 100% 100%;
     z-index: -1;
-    position: fixed;
+    position: absolute;
   }
   #title {
     color: #BECBB2;
